--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@types/uuid": "^9.0.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "18.0.28",
@@ -26,6 +28,7 @@
 		"eslint-plugin-react": "7.32.2",
 		"postcss": "8.4.21",
 		"prettier": "2.8.7",
+		"prettier-plugin-tailwindcss": "^0.2.7",
 		"tailwindcss": "3.3.1",
 		"typescript": "5.0.4",
 		"vite": "4.2.0"
