--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@types/uuid": "^9.0.1",
 		"date-fns": "^2.29.3",
+		"framer-motion": "^10.12.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"uuid": "^9.0.0"
